--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     test:
         environment: testing # github 레포지토리 설정 environment
         env:
-            MONGODB_CLUSTER_ADDRESS: cluster0.tnwpwia.mongodb.net
+            MONGODB_CLUSTER_ADDRESS: cluster0.chatoev.mongodb.net
             MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
             MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
             PORT: 8080
