--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
     test:
         environment: testing # github 레포지토리 설정 environment
         env:
+            MONGODB-CONNECTION_PROTOCOL: mongodb+srv
             MONGODB_CLUSTER_ADDRESS: cluster0.chatoev.mongodb.net
             MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
             MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
