--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,13 +11,19 @@ jobs:
         environment: testing # github 레포지토리 설정 environment
         runs-on: ubuntu-latest
         container:
-            image: node:16 # 이렇게 하면 밑의 작업들이 도커환경에서 실행
+            image: node:16
         env:
-            MONGODB_CONNECTION_PROTOCOL: mongodb+srv
-            MONGODB_CLUSTER_ADDRESS: cluster0.chatoev.mongodb.net
-            MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-            MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+            MONGODB_CONNECTION_PROTOCOL: mongodb # mongodb+srv
+            MONGODB_CLUSTER_ADDRESS: mongodb # cluster0.chatoev.mongodb.net
+            MONGODB_USERNAME: root # ${{ secrets.MONGODB_USERNAME }}
+            MONGODB_PASSWORD: example # ${{ secrets.MONGODB_PASSWORD }}
             PORT: 8080
+        services: # 도커 서비스
+            mongodb:
+                image: mongo
+                env:
+                    MONGO_INITDB_ROOT_USERNAME: root # 테스팅 데이터베이스
+                    MONGO_INITDB_ROOT_PASSWORD: example
         steps:
             - name: Get Code
               uses: actions/checkout@v3
