adjusted network settings

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,19 @@ jobs:
     test:
         environment: testing # github 레포지토리 설정 environment
         runs-on: ubuntu-latest
-        container:
-            image: node:16
+        # container:
+        #     image: node:16
         env:
             MONGODB_CONNECTION_PROTOCOL: mongodb # mongodb+srv
-            MONGODB_CLUSTER_ADDRESS: mongodb # cluster0.chatoev.mongodb.net
+            MONGODB_CLUSTER_ADDRESS: 127.0.0.1:27017 # mongodb # cluster0.chatoev.mongodb.net
             MONGODB_USERNAME: root # ${{ secrets.MONGODB_USERNAME }}
             MONGODB_PASSWORD: example # ${{ secrets.MONGODB_PASSWORD }}
             PORT: 8080
         services: # 도커 서비스
             mongodb:
                 image: mongo
+                ports:
+                    - 27017:27017
                 env:
                     MONGO_INITDB_ROOT_USERNAME: root # 테스팅 데이터베이스
                     MONGO_INITDB_ROOT_PASSWORD: example
